--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/laskarit/viikko2/unicafe/.pytest_cache
-/laskarit/viikko2/unicafe/__pycache__
-/laskarit/viikko2/unicafe/src/__pycache__/
-/laskarit/viikko2/unicafe/.coverage
-/laskarit/viikko2/unicafe/htmlcov
+.vscode
+.DS_Store
+.coverage
+.pytest_cache
+__pycache__
