--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ invoke = "^1.6.0"
 cowsay = "^4.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
